// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. tile a 1`] = `
<Link>
  <View
    style={
      Object {
        "marginHorizontal": 10,
        "marginTop": 10,
      }
    }
  >
    <View
      style={
        Object {
          "marginBottom": 0,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#005B8D",
            "fontFamily": "GillSansMTStd-Medium",
            "fontSize": 12,
            "fontWeight": "400",
            "letterSpacing": 1.2,
            "lineHeight": 14,
            "marginBottom": 0,
          }
        }
      >
        LABEL
      </Text>
    </View>
    <Text
      style={
        Object {
          "color": "#333333",
          "fontFamily": "TimesModern-Bold",
          "fontSize": 35,
          "fontWeight": "900",
          "lineHeight": 35,
          "marginBottom": 10,
        }
      }
    >
      Driving Off
    </Text>
    <View
      style={
        Object {
          "marginBottom": 10,
        }
      }
    >
      <ArticleFlags />
    </View>
  </View>
  <View
    style={
      Object {
        "width": "100%",
      }
    }
  >
    <Image />
  </View>
</Link>
`;

exports[`2. tile b 1`] = `
<Link>
  <View
    style={
      Object {
        "paddingHorizontal": 10,
        "paddingTop": 10,
      }
    }
  >
    <View>
      <View
        style={
          Object {
            "marginBottom": 0,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#005B8D",
              "fontFamily": "GillSansMTStd-Medium",
              "fontSize": 12,
              "fontWeight": "400",
              "letterSpacing": 1.2,
              "lineHeight": 14,
              "marginBottom": 0,
            }
          }
        >
          LABEL
        </Text>
      </View>
      <Text
        style={
          Object {
            "color": "#333333",
            "fontFamily": "TimesModern-Bold",
            "fontSize": 25,
            "fontWeight": "900",
            "lineHeight": 25,
            "marginBottom": 5,
          }
        }
      >
        Driving Off
      </Text>
      <Text
        style={
          Object {
            "color": "#696969",
            "flexWrap": "wrap",
            "fontFamily": "TimesDigitalW04",
            "fontSize": 14,
            "lineHeight": 20,
            "marginBottom": 10,
          }
        }
      >
        <Text>
          
          Theresa May has two objectives tomorrow when MPs get to vote on Brexit — the trouble is both are fraught with difficulty.
          ...
        </Text>
      </Text>
      <View
        style={
          Object {
            "marginBottom": 10,
          }
        }
      >
        <ArticleFlags />
      </View>
    </View>
  </View>
</Link>
`;

exports[`3. tile c 1`] = `
<Link>
  <View
    style={
      Object {
        "height": "100%",
        "paddingHorizontal": 10,
        "paddingTop": 10,
      }
    }
  >
    <View
      style={
        Object {
          "marginBottom": 10,
          "width": "100%",
        }
      }
    >
      <Image />
    </View>
    <View>
      <View
        style={
          Object {
            "marginBottom": 0,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#005B8D",
              "fontFamily": "GillSansMTStd-Medium",
              "fontSize": 12,
              "fontWeight": "400",
              "letterSpacing": 1.2,
              "lineHeight": 14,
              "marginBottom": 0,
            }
          }
        >
          LABEL
        </Text>
      </View>
      <Text
        style={
          Object {
            "color": "#333333",
            "fontFamily": "TimesModern-Bold",
            "fontSize": 22,
            "fontWeight": "900",
            "lineHeight": 22,
            "marginBottom": 5,
            "paddingBottom": 5,
          }
        }
      >
        Driving Off
      </Text>
      <View
        style={
          Object {
            "marginBottom": 10,
          }
        }
      >
        <ArticleFlags />
      </View>
    </View>
  </View>
</Link>
`;

exports[`4. tile d 1`] = `
<Link>
  <View
    style={
      Object {
        "flexDirection": "row",
        "padding": 10,
      }
    }
  >
    <View
      style={
        Object {
          "width": "45%",
        }
      }
    >
      <Image />
    </View>
    <View
      style={
        Object {
          "paddingBottom": 5,
          "paddingHorizontal": 10,
          "width": "55%",
        }
      }
    >
      <View
        style={
          Object {
            "marginBottom": 0,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#005B8D",
              "fontFamily": "GillSansMTStd-Medium",
              "fontSize": 12,
              "fontWeight": "400",
              "letterSpacing": 1.2,
              "lineHeight": 14,
              "marginBottom": 0,
            }
          }
        >
          LABEL
        </Text>
      </View>
      <Text
        style={
          Object {
            "color": "#333333",
            "fontFamily": "TimesModern-Bold",
            "fontSize": 22,
            "fontWeight": "900",
            "lineHeight": 22,
            "marginBottom": 10,
          }
        }
      >
        Driving Off
      </Text>
      <View
        style={
          Object {
            "marginBottom": 10,
          }
        }
      >
        <ArticleFlags />
      </View>
    </View>
  </View>
</Link>
`;

exports[`5. tile e 1`] = `
<Link>
  <View
    style={
      Object {
        "flexDirection": "row",
        "padding": 10,
      }
    }
  >
    <View
      style={
        Object {
          "width": "45%",
        }
      }
    >
      <Image />
    </View>
    <View
      style={
        Object {
          "paddingBottom": 5,
          "paddingHorizontal": 10,
          "width": "55%",
        }
      }
    >
      <View
        style={
          Object {
            "marginBottom": 0,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#005B8D",
              "fontFamily": "GillSansMTStd-Medium",
              "fontSize": 12,
              "fontWeight": "400",
              "letterSpacing": 1.2,
              "lineHeight": 14,
              "marginBottom": 0,
            }
          }
        >
          LABEL
        </Text>
      </View>
      <Text
        style={
          Object {
            "color": "#333333",
            "fontFamily": "TimesModern-Bold",
            "fontSize": 22,
            "fontWeight": "900",
            "lineHeight": 22,
            "marginBottom": 5,
          }
        }
      >
        Driving Off
      </Text>
      <View
        style={
          Object {
            "marginBottom": 10,
          }
        }
      >
        <ArticleFlags />
      </View>
    </View>
  </View>
</Link>
`;

exports[`6. tile f 1`] = `
<Link>
  <View
    style={
      Object {
        "paddingHorizontal": 10,
        "paddingTop": 10,
      }
    }
  >
    <View>
      <View
        style={
          Object {
            "marginBottom": 0,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#005B8D",
              "fontFamily": "GillSansMTStd-Medium",
              "fontSize": 12,
              "fontWeight": "400",
              "letterSpacing": 1.2,
              "lineHeight": 14,
              "marginBottom": 0,
            }
          }
        >
          LABEL
        </Text>
      </View>
      <Text
        style={
          Object {
            "color": "#333333",
            "fontFamily": "TimesModern-Bold",
            "fontSize": 35,
            "fontWeight": "900",
            "lineHeight": 35,
            "marginBottom": 5,
          }
        }
      >
        Driving Off
      </Text>
      <Text
        style={
          Object {
            "color": "#696969",
            "fontFamily": "TimesModern-Regular",
            "fontSize": 19,
            "lineHeight": 21,
            "paddingBottom": 10,
          }
        }
      >
        The resignation of three Conservative MPs has shown up the divisions in their party that mirror those in Labour. A greater realignment may be needed
      </Text>
      <Text
        style={
          Object {
            "color": "#696969",
            "flexWrap": "wrap",
            "fontFamily": "TimesDigitalW04",
            "fontSize": 14,
            "lineHeight": 20,
            "marginBottom": 10,
          }
        }
      >
        <Text>
          
          Theresa May has two objectives tomorrow when MPs get to vote on Brexit — the trouble is both are fraught with difficulty.
          ...
        </Text>
      </Text>
      <View
        style={
          Object {
            "marginBottom": 10,
          }
        }
      >
        <ArticleFlags />
      </View>
    </View>
  </View>
</Link>
`;

exports[`7. tile g 1`] = `
<Link>
  <View
    style={
      Object {
        "flexDirection": "row",
        "padding": 10,
      }
    }
  >
    <View
      style={
        Object {
          "borderColor": "#FFFFFF",
          "borderWidth": 1,
          "overflow": "hidden",
          "width": "30%",
        }
      }
    >
      <Image />
    </View>
    <View
      style={
        Object {
          "justifyContent": "center",
          "paddingHorizontal": 10,
          "paddingTop": 5,
          "width": "70%",
        }
      }
    >
      <View
        style={
          Object {
            "marginBottom": 0,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#005B8D",
              "fontFamily": "GillSansMTStd-Medium",
              "fontSize": 12,
              "fontWeight": "400",
              "letterSpacing": 1.2,
              "lineHeight": 14,
              "marginBottom": 0,
            }
          }
        >
          LABEL
        </Text>
      </View>
      <Text
        style={
          Object {
            "color": "#333333",
            "fontFamily": "TimesModern-Bold",
            "fontSize": 22,
            "fontWeight": "900",
            "lineHeight": 22,
            "marginBottom": 5,
            "paddingBottom": 5,
          }
        }
      >
        Driving Off
      </Text>
      <View
        style={
          Object {
            "marginBottom": 10,
          }
        }
      >
        <ArticleFlags />
      </View>
    </View>
  </View>
</Link>
`;

exports[`8. tile h 1`] = `
<Link>
  <View
    style={
      Object {
        "flexDirection": "row",
        "paddingHorizontal": 10,
      }
    }
  >
    <View
      style={
        Object {
          "paddingRight": 10,
          "paddingVertical": 10,
          "width": "50%",
        }
      }
    >
      <View
        style={
          Object {
            "marginBottom": 0,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#005B8D",
              "fontFamily": "GillSansMTStd-Medium",
              "fontSize": 12,
              "fontWeight": "400",
              "letterSpacing": 1.2,
              "lineHeight": 14,
              "marginBottom": 0,
            }
          }
        >
          LABEL
        </Text>
      </View>
      <Text
        style={
          Object {
            "color": "#333333",
            "fontFamily": "TimesModern-Bold",
            "fontSize": 22,
            "fontWeight": "900",
            "lineHeight": 22,
            "marginBottom": 10,
          }
        }
      >
        Driving Off
      </Text>
      <Text
        style={
          Object {
            "color": "#696969",
            "flexWrap": "wrap",
            "fontFamily": "TimesDigitalW04",
            "fontSize": 14,
            "lineHeight": 20,
            "marginBottom": 10,
          }
        }
      >
        <Text>
          
          Theresa May has two objectives tomorrow when MPs get to vote on Brexit — the trouble is both are fraught with difficulty.
          ...
        </Text>
      </Text>
      <View
        style={
          Object {
            "marginBottom": 10,
          }
        }
      >
        <ArticleFlags />
      </View>
      <Text>
        <Text
          style={
            Object {
              "color": "#333333",
              "flexDirection": "row",
              "fontFamily": "GillSansMTStd-Medium",
              "fontSize": 13,
              "lineHeight": 15,
            }
          }
        >
          Libby Purves
        </Text>
      </Text>
    </View>
    <View
      style={
        Object {
          "flexDirection": "column",
          "justifyContent": "flex-end",
          "paddingTop": 10,
          "width": "50%",
        }
      }
    >
      <View>
        <Image />
      </View>
    </View>
  </View>
</Link>
`;

exports[`9. tile i 1`] = `
<Link>
  <View
    style={
      Object {
        "width": "100%",
      }
    }
  >
    <Image />
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#F0F0F0",
        "paddingBottom": 15,
        "paddingHorizontal": 40,
        "paddingTop": 20,
      }
    }
  >
    <View
      style={
        Object {
          "marginBottom": 0,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#005B8D",
            "fontFamily": "GillSansMTStd-Medium",
            "fontSize": 12,
            "fontWeight": "400",
            "letterSpacing": 1.2,
            "lineHeight": 14,
            "marginBottom": 0,
          }
        }
      >
        LABEL
      </Text>
    </View>
    <Text
      style={
        Object {
          "color": "#333333",
          "fontFamily": "TimesModern-Bold",
          "fontSize": 35,
          "fontWeight": "900",
          "lineHeight": 35,
          "marginBottom": 10,
          "textAlign": "center",
        }
      }
    >
      Driving Off
    </Text>
    <View
      style={
        Object {
          "marginBottom": 10,
        }
      }
    >
      <ArticleFlags />
    </View>
  </View>
</Link>
`;

exports[`10. tile j 1`] = `
<Link>
  <View
    style={
      Object {
        "flexDirection": "row",
        "paddingHorizontal": 10,
        "paddingTop": 10,
      }
    }
  >
    <View
      style={
        Object {
          "width": "40%",
        }
      }
    >
      <Image />
    </View>
    <View
      style={
        Object {
          "paddingBottom": 5,
          "paddingHorizontal": 10,
          "width": "60%",
        }
      }
    >
      <View
        style={
          Object {
            "marginBottom": 0,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#005B8D",
              "fontFamily": "GillSansMTStd-Medium",
              "fontSize": 12,
              "fontWeight": "400",
              "letterSpacing": 1.2,
              "lineHeight": 14,
              "marginBottom": 0,
            }
          }
        >
          LABEL
        </Text>
      </View>
      <Text
        style={
          Object {
            "color": "#333333",
            "fontFamily": "TimesModern-Bold",
            "fontSize": 22,
            "fontWeight": "900",
            "lineHeight": 22,
            "marginBottom": 10,
          }
        }
      >
        Driving Off
      </Text>
      <View
        style={
          Object {
            "marginBottom": 10,
          }
        }
      >
        <ArticleFlags />
      </View>
    </View>
  </View>
</Link>
`;

exports[`11. tile l 1`] = `
<Link>
  <View
    style={
      Object {
        "paddingHorizontal": 10,
        "paddingTop": 10,
      }
    }
  >
    <View>
      <View
        style={
          Object {
            "marginBottom": 0,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#005B8D",
              "fontFamily": "GillSansMTStd-Medium",
              "fontSize": 12,
              "fontWeight": "400",
              "letterSpacing": 1.2,
              "lineHeight": 14,
              "marginBottom": 0,
            }
          }
        >
          LABEL
        </Text>
      </View>
      <Text
        style={
          Object {
            "color": "#333333",
            "fontFamily": "TimesModern-Bold",
            "fontSize": 22,
            "fontWeight": "900",
            "lineHeight": 22,
            "marginBottom": 10,
          }
        }
      >
        Driving Off
      </Text>
      <View
        style={
          Object {
            "marginBottom": 10,
          }
        }
      >
        <ArticleFlags />
      </View>
    </View>
  </View>
</Link>
`;

exports[`12. tile m 1`] = `
<Link>
  <View
    style={
      Object {
        "paddingBottom": 10,
      }
    }
  >
    <View>
      <Text
        style={
          Object {
            "color": "#333333",
            "fontFamily": "TimesModern-Bold",
            "fontSize": 22,
            "fontWeight": "900",
            "lineHeight": 22,
            "marginBottom": 5,
            "marginTop": 20,
            "textAlign": "center",
          }
        }
      >
        Driving Off
      </Text>
      <Text
        style={
          Object {
            "color": "#696969",
            "fontFamily": "TimesDigitalW04-Regular",
            "fontSize": 14,
            "lineHeight": 20,
            "paddingBottom": 10,
            "textAlign": "center",
          }
        }
      >
        The resignation of three Conservative MPs has shown up the divisions in their party that mirror those in Labour. A greater realignment may be needed
      </Text>
      <View
        style={
          Object {
            "marginBottom": 10,
          }
        }
      >
        <ArticleFlags />
      </View>
    </View>
  </View>
</Link>
`;

exports[`13. tile n 1`] = `
<Link>
  <View
    style={
      Object {
        "backgroundColor": "#272D34",
        "flexDirection": "row",
        "padding": 10,
      }
    }
  >
    <View
      style={
        Object {
          "width": "50%",
        }
      }
    >
      <Image />
    </View>
    <View
      style={
        Object {
          "paddingHorizontal": 10,
          "width": "50%",
        }
      }
    >
      <View
        style={
          Object {
            "marginBottom": 0,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#CCC",
              "fontFamily": "GillSansMTStd-Medium",
              "fontSize": 12,
              "fontWeight": "400",
              "letterSpacing": 1.2,
              "lineHeight": 14,
              "marginBottom": 0,
            }
          }
        >
          LABEL
        </Text>
      </View>
      <Text
        style={
          Object {
            "color": "#FFFFFF",
            "fontFamily": "TimesModern-Bold",
            "fontSize": 22,
            "fontWeight": "900",
            "lineHeight": 22,
            "marginBottom": 5,
          }
        }
      >
        Driving Off
      </Text>
      <Text
        style={
          Object {
            "color": "#696969",
            "fontFamily": "TimesModern-Regular",
            "fontSize": 19,
            "lineHeight": 21,
            "paddingBottom": 10,
          }
        }
      >
        The resignation of three Conservative MPs has shown up the divisions in their party that mirror those in Labour. A greater realignment may be needed
      </Text>
      <View
        style={
          Object {
            "marginBottom": 10,
          }
        }
      >
        <ArticleFlags />
      </View>
    </View>
  </View>
</Link>
`;

exports[`14. tile o 1`] = `
<Link>
  <View
    style={
      Object {
        "backgroundColor": "#272D34",
        "paddingHorizontal": 12,
        "paddingVertical": 10,
      }
    }
  >
    <View>
      <View
        style={
          Object {
            "marginBottom": 0,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#CCC",
              "fontFamily": "GillSansMTStd-Medium",
              "fontSize": 12,
              "fontWeight": "400",
              "letterSpacing": 1.2,
              "lineHeight": 14,
              "marginBottom": 0,
            }
          }
        >
          LABEL
        </Text>
      </View>
      <Text
        style={
          Object {
            "color": "#FFFFFF",
            "fontFamily": "TimesModern-Bold",
            "fontSize": 22,
            "fontWeight": "900",
            "lineHeight": 22,
            "marginBottom": 11,
            "marginTop": 5,
          }
        }
      >
        Driving Off
      </Text>
      <View
        style={
          Object {
            "marginBottom": 10,
          }
        }
      >
        <ArticleFlags />
      </View>
    </View>
  </View>
</Link>
`;

exports[`15. tile p 1`] = `
<Link>
  <View
    style={
      Object {
        "alignItems": "center",
        "paddingVertical": 20,
      }
    }
  >
    <View
      style={
        Object {
          "borderColor": "#FFFFFF",
          "borderWidth": 1,
          "overflow": "hidden",
          "width": "30%",
        }
      }
    >
      <Image />
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "paddingTop": 10,
        }
      }
    >
      <View
        style={
          Object {
            "marginBottom": 0,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#005B8D",
              "fontFamily": "GillSansMTStd-Medium",
              "fontSize": 12,
              "fontWeight": "400",
              "letterSpacing": 1.2,
              "lineHeight": 14,
              "marginBottom": 0,
            }
          }
        >
          LABEL
        </Text>
      </View>
      <Text
        style={
          Object {
            "color": "#1D1D1B",
            "fontFamily": "TimesModern-Bold",
            "fontSize": 35,
            "fontWeight": "900",
            "lineHeight": 35,
            "marginBottom": 5,
            "paddingHorizontal": 10,
            "paddingTop": 10,
            "textAlign": "center",
          }
        }
      >
        Driving Off
      </Text>
      <Text
        style={
          Object {
            "color": "#696969",
            "fontFamily": "TimesModern-Regular",
            "fontSize": 14,
            "lineHeight": 20,
            "paddingBottom": 10,
            "paddingHorizontal": 40,
            "textAlign": "center",
          }
        }
      >
        The resignation of three Conservative MPs has shown up the divisions in their party that mirror those in Labour. A greater realignment may be needed
      </Text>
      <View
        style={
          Object {
            "marginBottom": 10,
          }
        }
      >
        <ArticleFlags />
      </View>
      <Text>
        <Text
          style={
            Object {
              "color": "#850029",
              "flexDirection": "row",
              "fontFamily": "GillSansMTStd-Medium",
              "fontSize": 12,
              "letterSpacing": 0.6,
              "lineHeight": 12,
            }
          }
        >
          Libby Purves
        </Text>
      </Text>
    </View>
  </View>
</Link>
`;

exports[`16. tile q 1`] = `
<Link>
  <View
    style={
      Object {
        "alignItems": "center",
        "paddingVertical": 10,
      }
    }
  >
    <View
      style={
        Object {
          "marginBottom": 10,
          "width": "100%",
        }
      }
    >
      <Image />
    </View>
  </View>
</Link>
`;

exports[`17. tile r 1`] = `
<Link>
  <View
    style={
      Object {
        "paddingBottom": 15,
        "paddingHorizontal": 20,
        "paddingTop": 10,
      }
    }
  >
    <View>
      <View
        style={
          Object {
            "marginBottom": 0,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#005B8D",
              "fontFamily": "GillSansMTStd-Medium",
              "fontSize": 12,
              "fontWeight": "400",
              "letterSpacing": 1.2,
              "lineHeight": 14,
              "marginBottom": 0,
            }
          }
        >
          LABEL
        </Text>
      </View>
      <Text
        style={
          Object {
            "color": "#333333",
            "fontFamily": "TimesModern-Bold",
            "fontSize": 45,
            "fontWeight": "900",
            "lineHeight": 45,
            "marginBottom": 5,
          }
        }
      >
        Driving Off
      </Text>
      <View
        style={
          Object {
            "marginBottom": 10,
          }
        }
      >
        <ArticleFlags />
      </View>
    </View>
    <View>
      <Image />
    </View>
  </View>
</Link>
`;

exports[`18. tile s 1`] = `
<View
  style={
    Object {
      "paddingBottom": 10,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#1D1D1B",
          "fontFamily": "TimesModern-Bold",
          "fontSize": 22,
          "marginBottom": 15,
        }
      }
    >
      Nature notes
    </Text>
  </View>
  <Text
    style={
      Object {
        "color": "#696969",
        "fontFamily": "TimesModern-Bold",
        "fontSize": 14,
        "lineHeight": 20,
      }
    }
  >
    <Text>
      <Text
        style={
          Object {
            "color": "#1D1D1B",
            "fontWeight": "bold",
          }
        }
      >
        Rick Astley
      </Text>
      , singer-songwriter, 
      <Text
        style={
          Object {
            "fontStyle": "italic",
          }
        }
      >
        Never Gonna Give You Up 
      </Text>
      (1987), 53; 
      <Text
        style={
          Object {
            "color": "#1D1D1B",
            "fontWeight": "bold",
          }
        }
      >
        Mike Batt
      </Text>
      , composer, songwriter, 
      <Text
        style={
          Object {
            "fontStyle": "italic",
          }
        }
      >
        Wombling Free 
      </Text>
      (1978), 
      <Text
        style={
          Object {
            "fontStyle": "italic",
          }
        }
      >
        Bright Eyes 
      </Text>
    </Text>
  </Text>
  <Text
    style={
      Object {
        "color": "#696969",
        "fontFamily": "GillSansMTStd-Medium",
        "fontSize": 12,
        "marginTop": 10,
      }
    }
  >
    <Text>
      Libby Purves
    </Text>
  </Text>
</View>
`;

exports[`19. tile t 1`] = `
<Link>
  <View
    style={
      Object {
        "flexDirection": "row",
        "padding": 10,
      }
    }
  >
    <View
      style={
        Object {
          "width": "50%",
        }
      }
    >
      <Image />
    </View>
    <View
      style={
        Object {
          "paddingHorizontal": 10,
          "paddingVertical": 5,
          "width": "50%",
        }
      }
    >
      <View
        style={
          Object {
            "marginBottom": 0,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#005B8D",
              "fontFamily": "GillSansMTStd-Medium",
              "fontSize": 12,
              "fontWeight": "400",
              "letterSpacing": 1.2,
              "lineHeight": 14,
              "marginBottom": 0,
            }
          }
        >
          LABEL
        </Text>
      </View>
      <Text
        style={
          Object {
            "color": "#333333",
            "fontFamily": "TimesModern-Bold",
            "fontSize": 22,
            "fontWeight": "900",
            "lineHeight": 22,
            "marginBottom": 5,
          }
        }
      >
        Driving Off
      </Text>
      <View
        style={
          Object {
            "marginBottom": 10,
          }
        }
      >
        <ArticleFlags />
      </View>
    </View>
  </View>
</Link>
`;

exports[`20. tile u 1`] = `
<Link>
  <View
    style={
      Object {
        "flexDirection": "row",
        "padding": 10,
      }
    }
  >
    <View
      style={
        Object {
          "paddingBottom": 5,
          "width": "33.33%",
        }
      }
    >
      <View
        style={
          Object {
            "marginBottom": 0,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#005B8D",
              "fontFamily": "GillSansMTStd-Medium",
              "fontSize": 12,
              "fontWeight": "400",
              "letterSpacing": 1.2,
              "lineHeight": 14,
              "marginBottom": 0,
            }
          }
        >
          LABEL
        </Text>
      </View>
      <Text
        style={
          Object {
            "color": "#333333",
            "fontFamily": "TimesModern-Bold",
            "fontSize": 25,
            "fontWeight": "900",
            "lineHeight": 25,
            "marginBottom": 5,
            "paddingVertical": 5,
          }
        }
      >
        Driving Off
      </Text>
      <View
        style={
          Object {
            "marginBottom": 10,
          }
        }
      >
        <ArticleFlags />
      </View>
    </View>
    <View
      style={
        Object {
          "width": "66.66%",
        }
      }
    >
      <Image />
    </View>
  </View>
</Link>
`;

exports[`21. tile v 1`] = `
<Link>
  <View
    style={
      Object {
        "paddingHorizontal": 10,
        "paddingTop": 10,
      }
    }
  >
    <View
      style={
        Object {
          "marginBottom": 10,
          "width": "100%",
        }
      }
    >
      <Image />
    </View>
    <View>
      <View
        style={
          Object {
            "marginBottom": 0,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#005B8D",
              "fontFamily": "GillSansMTStd-Medium",
              "fontSize": 12,
              "fontWeight": "400",
              "letterSpacing": 1.2,
              "lineHeight": 14,
              "marginBottom": 0,
            }
          }
        >
          LABEL
        </Text>
      </View>
      <Text
        style={
          Object {
            "color": "#333333",
            "fontFamily": "TimesModern-Bold",
            "fontSize": 35,
            "fontWeight": "900",
            "lineHeight": 35,
            "marginBottom": 5,
            "paddingBottom": 5,
          }
        }
      >
        Driving Off
      </Text>
      <View
        style={
          Object {
            "marginBottom": 10,
          }
        }
      >
        <ArticleFlags />
      </View>
    </View>
  </View>
</Link>
`;

exports[`22. tile w 1`] = `
<Link>
  <View
    style={
      Object {
        "flexDirection": "row",
        "paddingHorizontal": 20,
        "paddingVertical": 10,
      }
    }
  >
    <View
      style={
        Object {
          "paddingBottom": 5,
          "paddingRight": 20,
          "width": "33.33%",
        }
      }
    >
      <View
        style={
          Object {
            "marginBottom": 0,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#005B8D",
              "fontFamily": "GillSansMTStd-Medium",
              "fontSize": 12,
              "fontWeight": "400",
              "letterSpacing": 1.2,
              "lineHeight": 14,
              "marginBottom": 0,
            }
          }
        >
          LABEL
        </Text>
      </View>
      <Text
        style={
          Object {
            "color": "#333333",
            "fontFamily": "TimesModern-Bold",
            "fontSize": 35,
            "fontWeight": "900",
            "lineHeight": 35,
            "marginBottom": 5,
          }
        }
      >
        Driving Off
      </Text>
      <Text
        style={
          Object {
            "color": "#696969",
            "flexWrap": "wrap",
            "fontFamily": "TimesDigitalW04",
            "fontSize": 14,
            "lineHeight": 20,
            "marginBottom": 10,
          }
        }
      >
        <Text>
          
          Theresa May has two objectives tomorrow when MPs get to vote on Brexit — the trouble is both are fraught with difficulty.
          ...
        </Text>
      </Text>
      <View
        style={
          Object {
            "marginBottom": 10,
          }
        }
      >
        <ArticleFlags />
      </View>
    </View>
    <View
      style={
        Object {
          "width": "66.66%",
        }
      }
    >
      <Image />
    </View>
  </View>
</Link>
`;

exports[`23. tile x 1`] = `
<Link>
  <View
    style={
      Object {
        "paddingHorizontal": 10,
        "paddingTop": 10,
      }
    }
  >
    <View>
      <View
        style={
          Object {
            "marginBottom": 0,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#005B8D",
              "fontFamily": "GillSansMTStd-Medium",
              "fontSize": 12,
              "fontWeight": "400",
              "letterSpacing": 1.2,
              "lineHeight": 14,
              "marginBottom": 0,
            }
          }
        >
          LABEL
        </Text>
      </View>
      <Text
        style={
          Object {
            "color": "#333333",
            "fontFamily": "TimesModern-Bold",
            "fontSize": 45,
            "fontWeight": "900",
            "lineHeight": 45,
            "marginBottom": 5,
          }
        }
      >
        Driving Off
      </Text>
      <Text
        style={
          Object {
            "color": "#696969",
            "fontFamily": "TimesDigitalW04-Regular",
            "fontSize": 25,
            "lineHeight": 25,
            "paddingBottom": 10,
          }
        }
      >
        The resignation of three Conservative MPs has shown up the divisions in their party that mirror those in Labour. A greater realignment may be needed
      </Text>
      <Text
        style={
          Object {
            "color": "#696969",
            "flexWrap": "wrap",
            "fontFamily": "TimesDigitalW04",
            "fontSize": 14,
            "lineHeight": 20,
            "marginBottom": 10,
          }
        }
      >
        <Text>
          
          ‘The prodigal son returns.” So read a banner tied to the wall of the Paul Strank Stand at Kingsmeadow, the home of AFC Wimbledon, on Saturday, alongside the sepia-toned image of a fresh-faced Wally Downes, sporting an 80s haircut and Wimbledon strip, with a mischievous glint in his eye.
          ...
        </Text>
      </Text>
      <View
        style={
          Object {
            "marginBottom": 10,
          }
        }
      >
        <ArticleFlags />
      </View>
    </View>
  </View>
</Link>
`;

exports[`24. tile y 1`] = `
<Link>
  <View
    style={
      Object {
        "paddingHorizontal": 10,
        "paddingTop": 10,
      }
    }
  >
    <View>
      <View
        style={
          Object {
            "marginBottom": 0,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#005B8D",
              "fontFamily": "GillSansMTStd-Medium",
              "fontSize": 12,
              "fontWeight": "400",
              "letterSpacing": 1.2,
              "lineHeight": 14,
              "marginBottom": 0,
            }
          }
        >
          LABEL
        </Text>
      </View>
      <Text
        style={
          Object {
            "color": "#333333",
            "fontFamily": "TimesModern-Bold",
            "fontSize": 35,
            "fontWeight": "900",
            "lineHeight": 35,
            "marginBottom": 5,
          }
        }
      >
        Driving Off
      </Text>
      <Text
        style={
          Object {
            "color": "#696969",
            "flexWrap": "wrap",
            "fontFamily": "TimesDigitalW04",
            "fontSize": 14,
            "lineHeight": 20,
            "marginBottom": 10,
          }
        }
      >
        <Text>
          
          ‘The prodigal son returns.” So read a banner tied to the wall of the Paul Strank Stand at Kingsmeadow, the home of AFC Wimbledon, on Saturday, alongside the sepia-toned image of a fresh-faced Wally Downes, sporting an 80s haircut and Wimbledon strip, with a mischievous glint in his eye.
          ...
        </Text>
      </Text>
      <View
        style={
          Object {
            "marginBottom": 10,
          }
        }
      >
        <ArticleFlags />
      </View>
    </View>
  </View>
</Link>
`;

exports[`25. tile z 1`] = `
<Link>
  <View
    style={
      Object {
        "margin": 10,
      }
    }
  >
    <View>
      <View
        style={
          Object {
            "marginBottom": 0,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#005B8D",
              "fontFamily": "GillSansMTStd-Medium",
              "fontSize": 12,
              "fontWeight": "400",
              "letterSpacing": 1.2,
              "lineHeight": 14,
              "marginBottom": 0,
            }
          }
        >
          LABEL
        </Text>
      </View>
      <Text
        style={
          Object {
            "color": "#333333",
            "fontFamily": "TimesModern-Bold",
            "fontSize": 35,
            "fontWeight": "900",
            "lineHeight": 35,
            "marginBottom": 10,
          }
        }
      >
        Driving Off
      </Text>
      <View
        style={
          Object {
            "marginBottom": 10,
          }
        }
      >
        <ArticleFlags />
      </View>
    </View>
    <View>
      <Image />
    </View>
  </View>
</Link>
`;
